--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.4",
     "nodemon": "^2.0.2"
   }
 }
